k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest-api-service
  labels:
    app: rest-api-k8s
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: rest-api-k8s

---
apiVersion: v1
kind: Service
metadata:
  name: rest-api-nodeport
  labels:
    app: rest-api-k8s
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30080
    protocol: TCP
    name: http
  selector:
    app: rest-api-k8s
